# GoldenDict-Lite

./: .gitignore  CMakeLists.txt  README.md  build.ps1
frontend/: index.html
frontend/css/: style.css
frontend/js/: app.js
html/: index.html
src/: dict_cache.cpp  dict_cache.hpp  dictionary_manager.cpp  dictionary_manager.hpp  icon.rc  main.cpp
src/goldendict/: decompress.cc  decompress.hh  ex.hh  filetype.cc  filetype.hh  htmlescape.cc  htmlescape.hh  iconv.cc  iconv.hh  mdictparser.cc  mdictparser.hh  ripemd.cc  ripemd.hh  sptr.hh  text.cc  text.hh  tiff.hh
tests/: test_bugfixes.cpp
